Fix paragraph spacing.

--- a/content/media/css/style.css
+++ b/content/media/css/style.css
@@ -51,7 +51,7 @@ article.blog-post {
 article.blog-post p,
 article.blog-post ol,
 article.blog-post ul {
-    margin-bottom: 1.125em;
+    margin-bottom: 1.5em;
 }
 
 article.blog-post h1 {
